--- a/front/src/assets/base.css
+++ b/front/src/assets/base.css
@@ -1,10 +1,18 @@
-#app{
+#app {
     min-width: 100vw;
     min-height: 100vh;
     background-color: #57b5b3;
+    padding-top: 0px;
+    overflow: scroll;
+}
+
+main {
+    min-width: 100vw;
+    min-height: 100vh;
     padding-top: 1px;
     overflow: scroll;
 }
-body{
-    margin:0;
+
+body {
+    margin: 0;
 }
