--- a/front/src/assets/base.css
+++ b/front/src/assets/base.css
@@ -3,19 +3,18 @@
 }
 
 #app {
-    min-width: 100vw;
-    min-height: 100vh;
-    background-color: var(--background);
-    padding-top: 0px;
-    overflow: scroll;
+  min-height: 100vh;
+  background-color: var(--background);
+  padding-top: 0px;
+  overflow-y: auto;
 }
 
 main {
-    min-width: 100vw;
-    min-height: 100vh;
-    overflow: scroll;
+  min-height: 100vh;
+  overflow-y: auto;
 }
 
 body {
     margin: 0;
+  max-width: 100vw;
 }
